portfolio/src/main/webapp/style.css
html * {
    color: #000;
    font-family: 'Roboto', arial, sans-serif;
}

body {
    margin: 0%;
}

#sidenav {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    padding: 15px 25px 15px 25px;
    background-color: #0F9D58;
    overflow-x: hidden;
}

#sidenav-footer {
    position: fixed; 
    bottom: 0px;
}

#sidenav-footer p {
    font-size: 1.1em;
    color: #FFF;
}

#sidenav-footer .fab, #sidenav-footer .fas {
    font-size: 1.2em;
    display: inline;
    color: white;
    float: left;
    margin-right: 4px;
}

.profile-img {
    width: 200px;
    height: 200px;
    clip-path: circle(100px at center);
}

#sidenav h1, #sidenav h2 {
    text-align: center;
    color: #FFF;
    margin: 10px 0px 10px 0px;
}

#content-container {
    margin-left: 250px;
}

#header {
    background-color: #4285F4;
    height: 75px;
    width: 100%;
}

.tab-bar {
    margin: 0;
    position: relative;
    display:table-row;
}

.tab-bar li {
    color: #FFF;
    font-weight: bold;
    font-size: 1.3em;
    display: table-cell;
    height: 75px;
    list-style-type: none;
    padding: 0px 20px 0px 20px;
    vertical-align: middle;
}

#content {
    padding: 0px 10px;
}

